src/test/ui/expr/if/ifmt-unknown-trait.rs
fn main() {
    format!("{:notimplemented}", "3");
    //~^ ERROR: unknown format trait `notimplemented`
}
